erDiagram
    CUSTOMERS {
        int customer_id PK
        string company_name
        string phone
        string email UK
        boolean credit_hold
        string tier
        datetime created_at
        datetime updated_at
    }

    FIELDS {
        int field_id PK
        int customer_id FK
        string field_name
        string location
        float area_acres
        float canal_distance_meters
        boolean is_organic_border
        datetime created_at
    }

    EQUIPMENT {
        int equipment_id PK
        string serial_number UK
        string equipment_type
        string status
        string current_location
        float operating_hours
        datetime last_calibrated_at
        datetime created_at
        datetime updated_at
    }

    TECHNICIANS {
        int technician_id PK
        string full_name
        string role
        boolean authenticated
        string certification_level
        datetime created_at
    }

    CHEMICALS {
        int chemical_id PK
        string name UK
        string hazard_class
        boolean requires_signoff
        float min_canal_buffer_m
        float min_organic_buffer_m
        float max_wind_speed_kmh
    }

    DISPATCH_JOBS {
        int dispatch_id PK
        int equipment_id FK
        int field_id FK
        int technician_id FK
        string job_type
        int chemical_id FK
        string status
        string approval_status
        int approved_by FK
        datetime requested_at
        datetime started_at
        datetime completed_at
        string cancellation_reason
    }

    INCIDENT_NOTES {
        int incident_id PK
        int equipment_id FK
        int technician_id FK
        int dispatch_id FK
        text raw_note
        text summarized_note
        string severity
        boolean resolved
        datetime created_at
        datetime resolved_at
    }

    FLEET_REPORTS {
        int report_id PK
        string month
        string status
        int progress
        int generated_by FK
        datetime created_at
        datetime completed_at
    }

    AUDIT_LOGS {
        int audit_id PK
        string actor_type
        int actor_id
        string action_name
        text payload_json
        string status
        datetime timestamp
    }

    FINANCING_APPLICATIONS {
        int application_id PK
        int customer_id FK
        int field_id FK
        float requested_amount
        string purpose
        string status
        int admin_approved_by FK
        string provider_reference
        float interest_rate
        int term_months
        float monthly_payment
        boolean farmer_accepted
        string rejection_reason
        datetime created_at
        datetime updated_at
    }

    FINANCIAL_TRANSACTIONS {
        int transaction_id PK
        int application_id FK
        int customer_id FK
        string transaction_type
        float amount
        string status
        string verification_hash
        datetime created_at
    }

    CUSTOMERS ||--o{ FIELDS : "owns"
    FIELDS ||--o{ DISPATCH_JOBS : "receives"
    EQUIPMENT ||--o{ DISPATCH_JOBS : "assigned"
    TECHNICIANS ||--o{ DISPATCH_JOBS : "executes"
    CHEMICALS ||--o{ DISPATCH_JOBS : "applies"
    TECHNICIANS ||--o{ DISPATCH_JOBS : "authorizes"
    EQUIPMENT ||--o{ INCIDENT_NOTES : "involves"
    TECHNICIANS ||--o{ INCIDENT_NOTES : "reports"
    DISPATCH_JOBS ||--o{ INCIDENT_NOTES : "triggers"
    TECHNICIANS ||--o{ FLEET_REPORTS : "produces"
    CUSTOMERS ||--o{ FINANCING_APPLICATIONS : "applies_for"
    FIELDS ||--o{ FINANCING_APPLICATIONS : "collateral_or_target"
    TECHNICIANS ||--o{ FINANCING_APPLICATIONS : "admin_approves"
    FINANCING_APPLICATIONS ||--o{ FINANCIAL_TRANSACTIONS : "generates"
    CUSTOMERS ||--o{ FINANCIAL_TRANSACTIONS : "participates_in"

